rustidy/tests/parse-error/match_missing_comma_after_without_block/input.rs
const _: () = match () {
	a => b
	c => d
};
